delete trash apis
