# src/swagger.json
@@ -461,75 +461,6 @@
         }
       }
     },
-    "/bank/{userId}": {
-      "parameters": [
-        {
-          "name": "userId",
-          "in": "path",
-          "required": true,
-          "description": "ID of user that we want to find",
-          "type": "string"
-        }
-      ],
-      "post": {
-        "tags": ["Users"],
-        "summary": "Add a bank information to User",
-        "parameters": [
-          {
-            "in": "header",
-            "name": "Authorization",
-            "description": "JWT token",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "avatar",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/AddBank"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "Unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
-    "/bank/{userId}/{bankId}": {
-      "parameters": [
-        {
-          "name": "userId",
-          "in": "path",
-          "required": true,
-          "description": "ID of user that we want to find",
-          "type": "string"
-        },
-        {
-          "name": "bankId",
-          "in": "path",
-          "required": true,
-          "description": "ID of bank info obj that we want to delete",
-          "type": "string"
-        }
-      ],
-      "delete": {
-        "tags": ["Users"],
-        "summary": "Delete a Bank Information from User",
-        "responses": {
-          "default": {
-            "description": "Unexpected error",
-            "schema": {
-              "$ref": "#/definitions/Error"
-            }
-          }
-        }
-      }
-    },
     "/categories": {
       "post": {
         "tags": ["Categories"],
@@ -1297,16 +1228,6 @@
       "properties": {
         "avatar": {
           "type": "file"
-        }
-      }
-    },
-    "AddBank": {
-      "properties": {
-        "bankName": {
-          "type": "string"
-        },
-        "bankNumber": {
-          "type": "string"
         }
       }
     },
