# src/validations/user.validation.js
@@ -67,41 +67,6 @@ const checkUserID = {
   }),
 };
 
-const addBank = {
-  params: Joi.object().keys({
-    userId: Joi.required().custom(objectId),
-  }),
-  body: Joi.object().keys({
-    bankName: Joi.string().required(),
-    bankNumber: Joi.string().required(),
-  }),
-};
-
-const removeBank = {
-  params: Joi.object().keys({
-    userId: Joi.required().custom(objectId),
-    id: Joi.string().required(),
-  }),
-};
-
-const reservationBooking = {
-  params: Joi.object().keys({
-    userId: Joi.required().custom(objectId),
-  }),
-  body: Joi.object().keys({
-    experienceID: Joi.string().required(),
-    dateAvaibilityID: Joi.string().required(),
-    completed: Joi.boolean(),
-  }),
-};
-
-const joinBooking = {
-  params: Joi.object().keys({
-    userId: Joi.required().custom(objectId),
-    id: Joi.required().custom(objectId),
-  }),
-};
-
 module.exports = {
   createUser,
   getUsers,
@@ -110,8 +75,4 @@ module.exports = {
   deleteUser,
   getHosts,
   checkUserID,
-  addBank,
-  removeBank,
-  reservationBooking,
-  joinBooking,
 };
